--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,15 +9,19 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@radix-ui/react-visually-hidden": "^1.2.4",
+    "@ridemountainpig/svgl-react": "^1.0.14",
     "@tanstack/react-form": "^1.27.3",
     "@yooo_/env": "workspace:*",
     "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "catalog:",
-    "lucide-react": "^0.546.0",
+    "lucide-react": "^0.562.0",
+    "motion": "^12.24.11",
     "next": "^16.1.1",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "shadcn": "^3.6.2",
